<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clLoginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_movie_card"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_welcome_text_view_text_m_t"
                android:textSize="@dimen/login_welcome_text_view_text_size"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/login_top_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.48"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/login_welcome_image_width"
                android:layout_height="@dimen/login_welcome_image_height"
                android:layout_marginTop="@dimen/login_welcome_margin_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvWelcome"
                app:srcCompat="@drawable/ic_user" />


            <EditText
                android:id="@+id/etUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_login_username"
                android:inputType="textPersonName"
                android:layout_marginTop="@dimen/login_welcome_username_margin_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_welcome_password_margin_top"
                android:ems="10"
                android:hint="@string/hint_login_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etUsername" />

            <Button
                android:id="@+id/btnLogin"
                style="@style/CustomUserProfileText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundTint = "@color/custom_background"
                android:layout_marginTop="@dimen/login_welcome_btn_margin_top"
                android:alpha="0.75"
                android:background="@drawable/btn_selector"
                android:text="@string/btn_string"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/login_welcome_btn_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPassword"
                app:layout_constraintVertical_bias="0.296"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>