<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Image of movie poster with rounded corners-->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/view8"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        tools:src="@drawable/wrath_of_man"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/round_image_style" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:nextFocusUp="@id/view10">

        <androidx.cardview.widget.CardView
            android:id="@+id/view10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/card_view_margin_top"
            android:minHeight="@dimen/card_view_min_height"
            app:layout_constrainedWidth="@id/view1"
            tools:cardCornerRadius="@dimen/card_view_corner_rad"
            tools:cardElevation="@dimen/card_view_corner_el"
            app:cardBackgroundColor="@color/custom_movie_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view1"

            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="@dimen/card_view_min_height">

                <TextView
                    style="@style/film_genre_style"
                    android:id="@+id/view2"
                    android:layout_marginStart="@dimen/sh_genre_margin_left"
                    android:layout_marginTop="@dimen/sh_genre_margin_top"
                    android:textSize="@dimen/sh_genre_text_size"
                    tools:text="@string/str_movie_genre"
                    android:background="@color/color_shimmer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/view3"
                    android:background="@color/color_shimmer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/release_date_margin_left"
                    android:layout_marginTop="@dimen/release_date_margin_top"
                    tools:text="@string/str_release_date"
                    android:textSize="@dimen/release_date_text_size"
                    android:textColor="@color/custom_text"
                    android:fontFamily="@font/release_date_font"
                    app:layout_constraintStart_toEndOf="@id/view2"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/view4"
                    android:background="@color/color_shimmer"
                    android:layout_width="@dimen/movie_name_width"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/movie_name_height"
                    android:layout_marginStart="@dimen/movie_name_margin_left"
                    android:layout_marginTop="@dimen/movie_name_margin_top"
                    tools:text="@string/str_movie_name"
                    android:textSize="@dimen/movie_name_text_size"
                    android:textColor="@color/custom_text"
                    android:textStyle="bold"
                    android:fontFamily="@font/movie_name_font"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/tvAgeCategory"
                    android:layout_width="@dimen/sh_age_category_oval_width"
                    android:layout_height="@dimen/sh_age_category_oval_height"
                    android:layout_marginEnd="@dimen/sh_age_category_margin_right"
                    android:layout_marginTop="@dimen/sh_age_category_margin_top"
                    android:background="@drawable/sh_age_category"
                    android:textAlignment="center"
                    tools:text="@string/str_age_category"
                    android:textSize="@dimen/age_category_text_size"
                    android:textColor="@color/custom_text"
                    android:fontFamily="@font/roboto"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <RatingBar
                    android:id="@+id/rbMovieDetailStar"
                    android:layout_width="wrap_content"
                    android:layout_height="13dp"
                    android:stepSize="@dimen/rb_movie_star_step_size"
                    tools:rating="2"
                    android:numStars="5"
                    android:layout_marginStart="@dimen/star_layout_margin_left"
                    android:layout_marginTop="@dimen/star_layout_margin_top"
                    android:layout_marginBottom="@dimen/rb_movie_star_l_margin_b"
                    style="@style/ImageRatingBar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view4"
                    />

                <!--
                    The view that contains the description of the movie. The size of the content can
                     be any (well, almost any)
                -->
                <TextView
                    android:id="@+id/view5"
                    android:background="@color/color_shimmer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/movie_description_margin_left"
                    android:layout_marginEnd="@dimen/movie_description_margin_right"
                    android:layout_marginTop="@dimen/movie_description_margin_top"
                    tools:text="@string/str_movie_description"
                    android:textSize="@dimen/movie_description_text_size"
                    android:fontFamily="@font/movie_description_font"
                    android:textColor="@color/custom_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rbMovieDetailStar"
                    />

                <!--
                    The view that contains the actors list name
                -->
                <TextView
                    android:id="@+id/view6"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/actor_list_name_height"
                    android:layout_marginStart="@dimen/actor_list_name_margin_left"
                    android:layout_marginTop="@dimen/actor_list_name_margin_top"
                    android:fontFamily="@font/actors_list_name_font"
                    android:text="@string/str_actors_list_name"
                    android:textSize="@dimen/actors_list_name_text_size"
                    android:textColor="@color/custom_text"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view5"/>

                <!--
                    Recycling view to display a list of movie actors
                -->
                <View
                    android:background="@color/color_shimmer"
                    android:id="@+id/view7"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/actor_list_layout_height"
                    tools:orientation="horizontal"
                    android:layout_marginTop="@dimen/actor_list_margin_top"
                    android:layout_marginBottom="@dimen/actor_list_margin_bottom"
                    android:layout_marginStart="@dimen/actor_list_margin_left"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view6"
                    tools:ignore="RtlSymmetry" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>